--- a/hero/rotating products/index.html
+++ b/hero/rotating products/index.html
@@ -6,16 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>rotate products</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/9bd5f03e5f.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
       <nav>
-        <a href="#"> <img src="img/logo.png" alt="" class="logo" /></a>
         <ul class="links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Products</a></li>
           <li><a href="#">About us</a></li>
           <li><a href="#">Contact</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Home</a></li>
+        </ul>
+        <a href="#"> <img src="img/logo.png" alt="" class="logo" /></a>
+        <ul class="account">
+          <li><input type="text"></li>
+          <li><a href="#">Login</a></li>
+          <li><a href="#">Panier</a></li>
         </ul>
       </nav>
       <section class="hero">
@@ -83,10 +92,10 @@
             </div>
           </div>
           <div class="colors-panel">
-            <button class="product-color" data-product="grap"></button>
-            <button class="product-color" data-product="watermelon"></button>
-            <button class="product-color" data-product="lemon"></button>
-            <button class="product-color" data-product="peach"></button>
+            <div class="product-color" data-product="grap"></div>
+            <div class="product-color" data-product="watermelon"></div>
+            <div class="product-color" data-product="lemon"></div>
+            <div class="product-color" data-product="peach"></div>
           </div>
         </div>
       </section>
