hero product rotation

--- a/hero/rotating products/index.html
+++ b/hero/rotating products/index.html
@@ -22,7 +22,7 @@
         </ul>
         <a href="#"> <img src="img/logo.png" alt="" class="logo" /></a>
         <ul class="account">
-          <li><input type="text"></li>
+          <li><input type="text" /></li>
           <li><a href="#">Login</a></li>
           <li><a href="#">Panier</a></li>
         </ul>
@@ -38,67 +38,75 @@
         </div>
         <div class="hero-product">
           <div class="products-img">
-            <div class="product-cercle first-product">
+            <div class="product-cercle first-product" data-product="grap">
               <img
                 src="img/graps-1.png"
                 alt="Image de upklyak sur Freepik"
                 class="product-img"
-                data-product="grap"
               />
+            </div>
+            <div class="product-cercle first-product" data-product="watermelon">
               <img
                 src="img/watermelon-1.png"
                 alt="Image de upklyak sur Freepik"
                 class="product-img"
-                data-product="watermelon"
               />
+            </div>
+            <div class="product-cercle first-product" data-product="lemon">
               <img
                 src="img/lemon-1.png"
                 alt="Image de upklyak sur Freepik"
                 class="product-img"
-                data-product="lemon"
               />
+            </div>
+            <div class="product-cercle first-product" data-product="peach">
               <img
                 src="img/peach-1.png"
                 alt="Image de upklyak sur Freepik"
                 class="product-img"
-                data-product="peach"
               />
             </div>
-            <div class="product-cercle second-product">
+            <div class="product-cercle second-product" data-product="grap">
               <img
                 src="img/graps-2.png"
                 alt="Image de upklyak sur Freepik"
                 class="product-img"
-                data-product="grap"
               />
+            </div>
+            <div
+              class="product-cercle second-product"
+              data-product="watermelon"
+            >
               <img
                 src="img/watermelon-2.png"
                 alt="Image de upklyak sur Freepik"
                 class="product-img"
-                data-product="watermelon"
               />
+            </div>
+            <div class="product-cercle second-product" data-product="lemon">
               <img
                 src="img/lemon-2.png"
                 alt="Image de upklyak sur Freepik"
                 class="product-img"
-                data-product="lemon"
               />
+            </div>
+            <div class="product-cercle second-product" data-product="peach">
               <img
                 src="img/peach-2.png"
                 alt="Image de upklyak sur Freepik"
                 class="product-img"
-                data-product="peach"
               />
             </div>
           </div>
           <div class="colors-panel">
-            <div class="product-color" data-product="grap"></div>
-            <div class="product-color" data-product="watermelon"></div>
-            <div class="product-color" data-product="lemon"></div>
-            <div class="product-color" data-product="peach"></div>
+            <div class="product-color" id="grap"></div>
+            <div class="product-color" id="watermelon"></div>
+            <div class="product-color" id="lemon"></div>
+            <div class="product-color" id="peach"></div>
           </div>
         </div>
       </section>
     </header>
+    <script src="main.js"></script>
   </body>
 </html>
